# voxnote

./: .gitignore  README.md  app.js  index.html  manifest.json  package.json  server.py  styles.css
.github/workflows/: release.yml
docs/: compatibility-checklist.md  desktop-roadmap.md  github-release-guide.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
