[package]
name = "voxnote"
version = "0.1.0"
description = "VoxNote desktop speech-to-text app"
authors = ["VoxNote"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
